manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(project.name)
  labels:
    name: "$(project.name)"
    app: $(project.name)
    environment: "segura"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $(project.name)
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: $(project.name)
        app: $(project.name)
    spec:
      containers:
        - image: seguraconreg.azurecr.io/$(project.name):$(Build.BuildId)
          name: $(project.name)
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      restartPolicy: Always
