manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: segura-web-ingress
  namespace: segura
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - segura-web-dev.segura-pay.com
    secretName: segura-web-tls
  rules:
  - host: segura-web-dev.segura-pay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: segura-web
            port:
              number: 3000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: segura-web-ingress
  namespace: segura
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - segura-web-dev.segura-pay.com
    secretName: segura-web-tls
  rules:
  - host: segura-web-dev.segura-pay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: segura-web
            port:
              number: 3000
